fix: card image spacing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,3 +104,11 @@ body {
   font-size: 0.5rem;
   line-height: 0.75rem;
 }
+
+.card-image-container div {
+  gap: 3.9%;
+}
+
+.card-image-container > div:nth-child(2) {
+  margin: -7% 0 -7% -.7%;
+}
